<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".login.view.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/default_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginVertical="100dp"
        android:layout_centerHorizontal="true"
        android:foreground="@drawable/image_avatar"
        app:cardCornerRadius="12dp"
        app:cardMaxElevation="20dp"/>

    <LinearLayout
        android:id="@+id/phone_input_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/default_avatar">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_box">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_id_card"
                android:paddingHorizontal="5dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="1.5dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/gray"/>
            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="220dp"
                android:layout_height="36dp"
                android:hint="@string/prompt_phone_number"
                android:paddingHorizontal="5dp"
                android:background="@null"
                android:inputType="textPhonetic"
                android:selectAllOnFocus="true" />
        </LinearLayout>
        <ImageView
            android:id="@+id/phone_delete_ic"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_delete"
            android:paddingHorizontal="5dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_input_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/phone_input_box"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_box">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock"
                android:paddingHorizontal="5dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="1.5dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/gray"/>
            <EditText
                android:id="@+id/password_et"
                android:layout_width="220dp"
                android:layout_height="36dp"
                android:paddingHorizontal="5dp"
                android:hint="@string/prompt_password"
                android:background="@null"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/password_eye_ic"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_preview_close"
            android:paddingHorizontal="5dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="46dp"
        android:layout_below="@+id/password_input_box"
        android:background="@color/accent_hint"/>

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_below="@+id/password_input_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:background="@drawable/bg_login_btn_unable"
        android:gravity="center"
        android:text="@string/action_sign_in_short" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="58dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/login_tv">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_blue_600"
            android:layout_alignParentStart="true"
            android:text="@string/forget_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/intent_register"
            android:textColor="@color/light_blue_600" />
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_input_box"
        app:layout_constraintStart_toStartOf="@+id/password_input_box"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/agreement_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:text="点击登录代表同意「StaryKit」用户协议及隐私协议"/>
</RelativeLayout>